--- a/style.css
+++ b/style.css
@@ -1,9 +1,23 @@
 .book{
-    width: 50px;
-    height: 50px;
+    width: 200px;
+    height: 200px;
     margin: 0;
 }
 
 .book-shelf{
     display: flex;
+}
+
+.main-container{
+    display: grid;
+
+}
+
+#input-book-form{
+    display: flex;
+    flex-direction: column;
+}
+
+img{
+    width: 50px;
 }
