--- a/style.css
+++ b/style.css
@@ -1,23 +1,156 @@
-.book{
-    width: 200px;
-    height: 200px;
+:root {
+    --shelf-color: #B46837;
+    --shelf-sceondary-color: #BC6F41;
+    --shelf-background: #7F3613;
+    --sidebar-color: #8963BA;
+    --bacckground-color: #C9D6EA;
+    --add-button-color: #688B58;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
 }
 
-.book-shelf{
-    display: flex;
+h1 {
+    font-size: 3rem;
 }
 
-.main-container{
+h2 {
+    font-size: 2rem;
+}
+
+h3 {
+    font-size: 1.5rem;
+}
+
+h4 {
+    font-size: 1.2rem;
+}
+
+h5 {
+    font-size: 1.1rem;
+}
+
+h6 {
+    font-size: 1rem;
+}
+
+html,
+body {
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    background-color: var(--bacckground-color);
+}
+
+.main-container {
     display: grid;
-
+    height: 100%;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 0.5fr 4fr;
 }
 
-#input-book-form{
+.header {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.login-button {
+    margin: 20px;
+}
+
+#input-book-form {
+    grid-row: 1/3;
+    grid-column: 1/2;
     display: flex;
     flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+    background-color: var(--sidebar-color);
+    color: white;
+    justify-content: space-between;
+    align-items: center;
 }
 
-img{
+.form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+input {
+    font-size: 1.2rem;
+}
+
+.shelf {
+    display: grid;
+    grid-template-rows: 30px 1fr;
+    margin: 30px 0;
+}
+
+.shelf-info {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.shelf-info>div {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.book-shelf {
+    grid-auto-flow: column;
+    white-space: normal;
+    overflow: auto;
+    max-height: 777px;
+    grid-template-rows: 1fr;
+    margin: 20px;
+    border-radius: 15px;
+}
+
+.book-info-container {
+    display: flex;
+    align-items: end;
+    margin-top: 20px;
+}
+
+.book-info-container img {
+    height: 120px;
+    width: auto;
+    justify-items: end;
+}
+
+.book {
+    display: inline-block ;
+    max-width: 400px;
+    border-bottom: 10px solid var(--shelf-color);
+    margin: 10px;
+}
+
+.book-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin: 5px;
+}
+
+.book-info {
+    justify-content: center;
+    width: 230px;
+}
+
+img {
     width: 50px;
+
 }
