--- a/style.css
+++ b/style.css
@@ -2,10 +2,12 @@
     --shelf-color: #B46837;
     --shelf-sceondary-color: #BC6F41;
     --shelf-background: #7F3613;
-    --sidebar-color: #8963BA;
+    --sidebar-color: #7E57C2;
     --bacckground-color: #C9D6EA;
     --add-button-color: #688B58;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap');
 
 h1,
 h2,
@@ -46,6 +48,7 @@ body {
     width: 100vw;
     margin: 0;
     background-color: var(--bacckground-color);
+    font-family: sans-serif;
 }
 
 .main-container {
@@ -89,12 +92,49 @@ body {
 
 input {
     font-size: 1.2rem;
+    background-color: var(--sidebar-color);
+    border: none;
+    color: white;
+    border-bottom: 2px solid white;
+}
+
+input:valid{
+    color: white;
+}
+
+input:focus{
+    color: white;
+    outline: none;
+    scale: 1.05;
+    transition: 0.3s;
+}
+
+::placeholder{
+    color: white;
 }
 
 .shelf {
     display: grid;
     grid-template-rows: 30px 1fr;
     margin: 30px 0;
+}
+
+#add-button{
+    color: white;
+    background-color: var(--sidebar-color);
+    border: 2px solid white;
+    border-radius: 15px;
+    padding: 10px;
+    font-size: 1.2rem;
+}
+
+#add-button:hover{
+    scale: 1.1;
+    cursor: pointer;
+}
+
+.invalid{
+    color: rgb(255, 0, 0);
 }
 
 .shelf-info {
@@ -132,7 +172,7 @@ input {
 }
 
 .book {
-    display: inline-block ;
+    display: inline-block;
     max-width: 400px;
     border-bottom: 10px solid var(--shelf-color);
     margin: 10px;
@@ -147,7 +187,7 @@ input {
 
 .book-info {
     justify-content: center;
-    width: 230px;
+    margin-right: 30px ;
 }
 
 img {
