--- a/style.css
+++ b/style.css
@@ -63,12 +63,44 @@ body {
     grid-row: 1/2;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: end;
     padding: 20px;
+    background-color: var(--sidebar-color);
+}
+
+.header button{
+    position: relative;
+    right: 100px;
+    font-size: 1.2rem;
+    font-family: sans-serif;
+    padding: 10px;
+    color: white;
+    background-color: var(--sidebar-color);
+    border: 2px solid white;
+    border-radius: 10px;
+}
+
+.header button:hover{
+    cursor: pointer;
+    scale: 1.1;
 }
 
 .login-button {
     margin: 20px;
+}
+
+.delete-button{
+    background-color: red;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 1.3rem;
+    color: white;
+}
+
+.delete-button:hover{
+    scale: 1.1;
+    cursor: pointer;
 }
 
 #input-book-form {
@@ -82,6 +114,7 @@ body {
     color: white;
     justify-content: space-between;
     align-items: center;
+    border-right: 2px solid white;
 }
 
 .form {
@@ -126,6 +159,7 @@ input:focus{
     border-radius: 15px;
     padding: 10px;
     font-size: 1.2rem;
+    font-family: sans-serif;
 }
 
 #add-button:hover{
